@@ -19,6 +19,8 @@ Option Base InStr(Mm.CmdLine$, "--base=1") > 0
 
 Const BASE% = Mm.Info(Option Base)
 
+add_test("test_chr_ascii")
+add_test("test_chr_utf8")
 add_test("test_mid_function")
 add_test("test_mid_command")
 
@@ -30,6 +32,44 @@ Sub setup_test()
 End Sub
 
 Sub teardown_test()
+End Sub
+
+Sub test_chr_ascii()
+  assert_string_equals("1", Chr$(49))
+  assert_string_equals("f", Chr$(102))
+  assert_string_equals("Z", Chr$(90))
+  assert_string_equals("(", Chr$(40))
+  Local s$ = Chr$(255)
+  assert_int_equals(1, Peek(Byte Peek(VarAddr s$)))
+  assert_int_equals(255, Peek(Byte Peek(VarAddr s$) + 1))
+End Sub
+
+Sub test_chr_utf8()
+  ' 1-byte unicode = ASCII
+  Local s$ = Chr$(Utf8 102)
+  assert_int_equals(1, Peek(Byte Peek(VarAddr s$)))
+  assert_int_equals(102, Peek(Byte Peek(VarAddr s$) + 1))
+
+  ' 2-byte unicode
+  s$ = Chr$(Utf8 &h00A3)
+  assert_int_equals(2, Peek(Byte Peek(VarAddr s$)))
+  assert_int_equals(&hC2, Peek(Byte Peek(VarAddr s$) + 1))
+  assert_int_equals(&hA3, Peek(Byte Peek(VarAddr s$) + 2))
+
+  ' 3-byte unicode
+  s$ = Chr$(Utf8 &hFB40)
+  assert_int_equals(3, Peek(Byte Peek(VarAddr s$)))
+  assert_int_equals(&hEF, Peek(Byte Peek(VarAddr s$) + 1))
+  assert_int_equals(&hAD, Peek(Byte Peek(VarAddr s$) + 2))
+  assert_int_equals(&h80, Peek(Byte Peek(VarAddr s$) + 3))
+
+  ' 4-byte unicode
+  s$ = Chr$(Utf8 &h12013)
+  assert_int_equals(4, Peek(Byte Peek(VarAddr s$)))
+  assert_int_equals(&hF0, Peek(Byte Peek(VarAddr s$) + 1))
+  assert_int_equals(&h92, Peek(Byte Peek(VarAddr s$) + 2))
+  assert_int_equals(&h80, Peek(Byte Peek(VarAddr s$) + 3))
+  assert_int_equals(&h93, Peek(Byte Peek(VarAddr s$) + 4))
 End Sub
 
 Sub test_mid_function()
